# soccer-manager

./: .dockerignore  .env.local  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/common/: tasks.py
src/common/management/commands/: wait_for_db.py
src/config/: celery.py  settings.py  urls.py
src/soccer/: admin.py  apps.py  consts.py  helpers.py  models.py  serializers.py  urls.py  views.py
src/soccer/migrations/: 0001_initial.py
src/tests/: test_player_api.py  test_team_api.py  test_transfer_api.py
src/user/: admin.py  models.py  serializers.py  urls.py  views.py
src/user/migrations/: 0001_initial.py
